ref: new many to many relation for halls
